fix wpm spacing

--- a/styles.css
+++ b/styles.css
@@ -263,8 +263,7 @@
   .stats {
     background-color: #2e3440;
     padding: 1rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    width: 45rem;
     border-radius: 1rem;
     display: flex;
     align-items: center;
@@ -327,14 +326,12 @@
     -webkit-animation: fadeIn ease 1s;
   }
 
-  .wpm-stats{ 
-    display: flex;
-  }
+
 
   .wpm {
-    display: inline-block;
-    margin-left: 10px;
-    margin-right: 20px;
+    display: inline-flex;
+    margin-left: 8rem;
+    margin-right: 30px;
     font-size: 3.1rem;
     color: white;
     font-weight: bold;
@@ -344,9 +341,13 @@
   }
 
   .wpm-num {
+    position: absolute;
+    text-align: center;
     display: inline-block;
+    left: 17%;
+    transform: translate(-50%, 0);
     margin-left: 10px;
-    margin-right: 10px;
+    margin-right: 5px;
     font-size: 3.1rem;
     color: white;
     font-weight: bold;
